[package]
name = "md6"
description = "Implementation of the MD6 hash function for Rust via FFI"
documentation = "https://rawcdn.githack.com/nabijaczleweli/md6-rs/doc/md6/index.html"
repository = "https://github.com/nabijaczleweli/md6-rs"
readme = "README.md"
keywords = ["hash", "md6"]
categories = ["algorithms"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "2.0.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]
build = "build.rs"


[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
